# smart-academic-mgmt

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  proj_requirements.txt  pyproject.toml  requirements.txt
database/: commands.sql  create_tables.sql  schema.sql  schema2.sql
gen-mock-data/: enrollments_fill.py  mock_gen.py
routes/: admin.py  student.py  teacher.py
services/: admin_utils.py  auth.py  database.py  marks_fill.py  mock_gen.py  mock_insert.py  student_utils.py  teacher_student_fill.py  teacher_utils.py
templates/: 403.html  about.html  base.html  login.html  request_acc.html  test.html
templates/admin/: _styles.html  assignment_mgmt.html  class_mgmt.html  enrollment_mgmt.html  home.html  reports.html  student_mgmt.html  subject_mgmt.html  teacher_mgmt.html  user_mgmt.html
templates/error/: 401.html  403.html  404.html
templates/student/: _styles.html  enrollments.html  home.html  marks.html  performance.html
templates/teacher/: _styles.html  add_marks.html  home.html
