[project]
name = "student-mgmt-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blinker==1.9.0",
    "cachelib==0.13.0",
    "click==8.3.1",
    "faker==40.1.0",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "flask-session==0.8.0",
    "greenlet==3.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "msgspec==0.20.0",
    "psycopg2==2.9.11",
    "python-dotenv==1.2.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "werkzeug==3.1.4",
]
